--- a/Nonograms/CustomControls/NonogramControl.xaml
+++ b/Nonograms/CustomControls/NonogramControl.xaml
@@ -14,10 +14,10 @@
             <Setter Property="HorizontalAlignment" Value="Left" />
             <Setter Property="VerticalAlignment" Value="Top" />
             <Setter Property="Margin" Value="10,10,0,0" />
-            <!--<Setter Property="Height" Value="500" />
-            <Setter Property="Width" Value="500" />-->
-            <!--<Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="BorderBrush" Value="Gray"/>-->
+            <Setter Property="Height" Value="500" />
+            <Setter Property="Width" Value="500" />
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderBrush" Value="Gray"/>
         </Style>
         <Style x:Key="FieldGrid" TargetType="Grid" BasedOn="{StaticResource GridBaseStyle}">
             <Setter Property="HorizontalAlignment" Value="Right"/>
@@ -66,45 +66,39 @@
             <Setter Property="VerticalAlignment" Value="Stretch" />
             <Setter Property="Grid.Column" Value="1"/>
         </Style>
+        <Style x:Key="AimRectangle" TargetType="Rectangle">
+            <Setter Property="Fill" Value="Orange"/>
+            <Setter Property="Opacity" Value="0.4"/>
+            <Setter Property="Visibility" Value="Collapsed"/>
+            <Setter Property="IsHitTestVisible" Value="False"/>
+        </Style>
+        <Style x:Key="VerticalAimRectangle" TargetType="Rectangle" BasedOn="{StaticResource AimRectangle}">
+            <Setter Property="Grid.Row" Value="0"/>
+            <Setter Property="Grid.RowSpan" Value="50"/>
+        </Style>
+        <Style x:Key="HorizontalAimRectangle" TargetType="Rectangle" BasedOn="{StaticResource AimRectangle}">
+            <Setter Property="Grid.Column" Value="0"/>
+            <Setter Property="Grid.ColumnSpan" Value="50"/>
+        </Style>
     </UserControl.Resources>
-    <Grid x:Name="BaseFieldGrid" Style="{StaticResource BaseFieldGrid}" Tapped="BaseFieldGrid_Tapped">
+    <Grid x:Name="FieldGrid" Style="{StaticResource BaseFieldGrid}" Tapped="BaseFieldGrid_Tapped" PointerEntered="FieldGrid_PointerEntered" PointerExited="FieldGrid_PointerExited" PointerReleased="FieldGrid_PointerReleased">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid x:Name="CornerGrid" Grid.Row="0" Grid.Column="0" Style="{StaticResource CornerGrid}" Background="LightCoral"/>
-        <Grid x:Name="LeftSideGrid" Grid.Row="1" Grid.Column="0" Style="{StaticResource LeftSideGrid}" Background="LightBlue">
-            <!--<Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>-->
-            <!--<Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
-                <TextBlock Grid.Row="0" Grid.Column="1" Text="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>-->
-            <Border Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="2" BorderBrush="Yellow" Height="2"/>
-            <Rectangle Grid.Row="1" Style="{StaticResource HorizontalBar}"/>
-            <Rectangle Grid.Row="2" Style="{StaticResource HorizontalBar}" StrokeThickness="2"/>
-            <Rectangle Grid.Row="3" Style="{StaticResource HorizontalBar}"/>
-        </Grid>
-        <Grid x:Name="TopSideGrid" Grid.Row="0" Grid.Column="1" Style="{StaticResource TopSideGrid}" Background="LightBlue">
-            <!--<Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>-->
-        </Grid>
-        <Grid x:Name="FieldGrid" Grid.Row="1" Grid.Column="1" Style="{StaticResource FieldGrid}" PointerEntered="FieldGrid_PointerEntered" PointerExited="FieldGrid_PointerExited" PointerReleased="FieldGrid_PointerReleased">
-            <!--<Grid.RowDefinitions>
+        <Grid x:Name="LeftSideGrid" Grid.Row="1" Grid.Column="0" Grid.RowSpan="4" Style="{StaticResource LeftSideGrid}" Background="LightBlue">
+            <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -113,64 +107,45 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+            <TextBlock Grid.Row="0" Grid.Column="1" Text="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+            <Border Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" BorderThickness="2" BorderBrush="Yellow" Height="2"/>
+            <Rectangle Grid.Row="1" Style="{StaticResource HorizontalBar}"/>
+            <Rectangle Grid.Row="2" Style="{StaticResource HorizontalBar}" StrokeThickness="2"/>
+            <Rectangle Grid.Row="3" Style="{StaticResource HorizontalBar}"/>
+        </Grid>
+        <Grid x:Name="TopSideGrid" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" Style="{StaticResource TopSideGrid}" Background="LightBlue">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Rectangle Fill="LightGray" Grid.RowSpan="7" Opacity="0.8"/>
-            <local:CellControl State="Tagged" Grid.Row="0" Grid.Column="0" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,0]" TagType="{x:Bind TagType}"/>
-            <local:CellControl State="Tagged" TagType="X" Grid.Row="0" Grid.Column="1" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,1]"/>
-            <local:CellControl State="Empty" Grid.Row="0" Grid.Column="2" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,2]"/>
-            <local:CellControl State="Checked" Grid.Row="0" Grid.Column="3" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,3]"/>-->
-
-
-            <!--<Grid Grid.Row="0" Grid.Column="0" Style="{StaticResource MiniGrid}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Rectangle Style="{StaticResource HorizontalBar}"/>
-                <Rectangle Style="{StaticResource VerticalBar}"/>
-            </Grid>
-            <Grid Grid.Row="0" Grid.Column="2" Style="{StaticResource MiniGrid}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Rectangle Style="{StaticResource HorizontalBar}"/>
-                <Rectangle Style="{StaticResource VerticalBar}"/>
-            </Grid>
-            <Grid Grid.Row="2" Grid.Column="0" Style="{StaticResource MiniGrid}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Rectangle Style="{StaticResource HorizontalBar}"/>
-                <Rectangle Style="{StaticResource VerticalBar}"/>
-            </Grid>
-            <Grid Grid.Row="2" Grid.Column="2" Style="{StaticResource MiniGrid}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Rectangle Style="{StaticResource HorizontalBar}"/>
-                <Rectangle Style="{StaticResource VerticalBar}"/>
-            </Grid>-->
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
+            <TextBlock Grid.Row="1" Grid.Column="0" Text="0" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center"/>
         </Grid>
+        <local:CellControl State="Tagged" Grid.Row="1" Grid.Column="1" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,0]" TagType="{x:Bind TagType}"/>
+        <local:CellControl State="Tagged" TagType="X" Grid.Row="1" Grid.Column="2" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,1]"/>
+        <local:CellControl State="Empty" Grid.Row="1" Grid.Column="3" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,2]"/>
+        <local:CellControl State="Checked" Grid.Row="1" Grid.Column="4" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[0,3]"/>
+        <local:CellControl Grid.Row="2" Grid.Column="1" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[1,0]"/>
+        <local:CellControl Grid.Row="2" Grid.Column="2" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[1,1]"/>
+        <local:CellControl Grid.Row="2" Grid.Column="3" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[1,2]"/>
+        <local:CellControl Grid.Row="2" Grid.Column="4" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[1,3]"/>
+        <local:CellControl Grid.Row="3" Grid.Column="1" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[2,0]"/>
+        <local:CellControl Grid.Row="3" Grid.Column="2" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[2,1]"/>
+        <local:CellControl Grid.Row="3" Grid.Column="3" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[2,2]"/>
+        <local:CellControl Grid.Row="3" Grid.Column="4" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[2,3]"/>
+        <local:CellControl Grid.Row="4" Grid.Column="1" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[3,0]"/>
+        <local:CellControl Grid.Row="4" Grid.Column="2" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[3,1]"/>
+        <local:CellControl Grid.Row="4" Grid.Column="3" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[3,2]"/>
+        <local:CellControl Grid.Row="4" Grid.Column="4" PointerPressed="CellControl_PointerPressed" PointerEntered="CellControl_PointerEntered" Tag="[3,3]"/>
+        <Rectangle x:Name="HorizontalAimRectangle" Style="{StaticResource HorizontalAimRectangle}"/>
+        <Rectangle x:Name="VerticalAimRectangle" Style="{StaticResource VerticalAimRectangle}"/>
     </Grid>
 </UserControl>
