--- a/Nonograms/CustomControls/NonogramControl.xaml
+++ b/Nonograms/CustomControls/NonogramControl.xaml
@@ -21,7 +21,7 @@
             <Setter Property="Background" Value="LightCoral"/>
         </Style>
         <Style x:Key="SideGrid" TargetType="Grid" BasedOn="{StaticResource GridBaseStyle}">
-            <Setter Property="Background" Value="LightBlue"/>
+            <Setter Property="Background" Value="#FF080E48"/>
         </Style>
         <Style x:Key="LeftSideGrid" TargetType="Grid" BasedOn="{StaticResource SideGrid}">
             <Setter Property="Grid.Row" Value="1"/>
