--- a/Nonograms/View/NonogramPage.xaml
+++ b/Nonograms/View/NonogramPage.xaml
@@ -8,7 +8,10 @@
     xmlns:controls="using:Nonograms.CustomControls"
     mc:Ignorable="d"
     DataContext="{Binding Path=NonogramPage, Source={StaticResource ViewModelLocator}}">
-    <Grid x:Name="LayoutRoot" Background="CadetBlue">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <ImageBrush ImageSource="ms-appx:///волна.jpg"/>
+        </Grid.Background>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="BigView">
@@ -16,7 +19,7 @@
                         <AdaptiveTrigger MinWindowWidth="361"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LayoutRoot.Background" Value="Cyan"/>
+                        <!--<Setter Target="LayoutRoot.Background" Value="Cyan"/>-->
                         <Setter Target="TagModeButton.(RelativePanel.RightOf)" Value="Nonogram"/>
                         <!--<Setter Target="TagModeButton.(RelativePanel.Below)" Value="CheckModeButton"/>-->
                         <Setter Target="TagModeButton.(RelativePanel.AlignVerticalCenterWith)" Value="Nonogram"/>
@@ -31,12 +34,12 @@
                         <AdaptiveTrigger MinWindowWidth="0"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="LayoutRoot.Background" Value="Blue"/>
+                        <!--<Setter Target="LayoutRoot.Background" Value="Blue"/>-->
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        <RelativePanel VerticalAlignment="Top" BorderBrush="Green" BorderThickness="7">
+        <RelativePanel VerticalAlignment="Top" BorderThickness="7" Opacity="0.8">
             <controls:NonogramControl x:Name="Nonogram" LeftSideValues="{Binding LeftSideValues}" TopSideValues="{Binding TopSideValues}" TagType="{Binding TagType}" CheckMode="{Binding CheckMode}" IsSolved="{Binding IsSolved, Mode=TwoWay}" FieldHistory="{Binding FieldHistory}" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
             <Button x:Name="CheckModeButton" Content="CheckMode" Command="{Binding CheckModeCommand}" Margin="10" RelativePanel.Below="Nonogram"/>
             <Button x:Name="TagModeButton" Content="TagMode" Command="{Binding TagTypeCommand}" Margin="10" RelativePanel.Below="Nonogram" RelativePanel.RightOf="CheckModeButton"/>
