--- a/Nonograms/View/NonogramPage.xaml
+++ b/Nonograms/View/NonogramPage.xaml
@@ -17,12 +17,8 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <!--<Setter Target="LayoutRoot.Background" Value="Cyan"/>-->
-                        <Setter Target="TagModeButton.(RelativePanel.RightOf)" Value="Nonogram"/>
-                        <!--<Setter Target="TagModeButton.(RelativePanel.Below)" Value="CheckModeButton"/>-->
-                        <Setter Target="TagModeButton.(RelativePanel.AlignVerticalCenterWith)" Value="Nonogram"/>
-                        <!--<Setter Target="CheckModeButton.(RelativePanel.RightOf)" Value="Nonogram"/>-->
-                        <Setter Target="CheckModeButton.(RelativePanel.Above)" Value="TagModeButton"/>
-                        <!--<Setter Target="CheckModeButton.(RelativePanel.AlignVerticalCenterWith)" Value="Nonogram"/>-->
+                        <Setter Target="PreviousStepButton.(RelativePanel.RightOf)" Value="Nonogram"/>
+                        <Setter Target="PreviousStepButton.(RelativePanel.AlignVerticalCenterWith)" Value="Nonogram"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="PhoneView">
